--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "allmighty-autocomplete",
+  "name": "noxs-allmighty-autocomplete",
   "version": "1.0.140706",
   "ignore": [],
   "homepage": "http://justgoscha.github.io/allmighty-autocomplete/",
